<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/colorful_wechat_and_whatsapp_theme_1"
    tools:context=".activities.SettingsActivity"
    >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settingProfileID"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="517dp"
        android:background="@android:drawable/ic_menu_report_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        />

    <TextView
        android:id="@+id/settingDisplayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="157dp"
        android:layout_marginBottom="461dp"
        android:gravity="center"
        android:text="@string/display_name"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/settingProfileID"
        />

    <TextView
        android:id="@+id/settingsStatusText"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="370dp"
        android:gravity="center"
        android:text="@string/hey_i_am_using_what_sapp_clone"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingDisplayName"
        tools:ignore="TextContrastCheck"
        />

    <Button
        android:id="@+id/settingChangeImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="50dp"
        android:gravity="center|center_horizontal"
        android:text="@string/change_picture"
        app:layout_constraintBottom_toTopOf="@+id/settingsChangeStatus"
        app:layout_constraintEnd_toEndOf="@+id/settingsChangeStatus"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/settingsChangeStatus"
        app:layout_constraintTop_toBottomOf="@+id/settingsStatusText"
        tools:ignore="TextContrastCheck"
        />

    <Button
        android:id="@+id/settingsChangeStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="130dp"
        android:gravity="center|center_horizontal"
        android:text="@string/change_status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingChangeImage"
        tools:ignore="TextContrastCheck"
        />

</androidx.constraintlayout.widget.ConstraintLayout>